<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background" >

    <TextView
        android:id="@+id/tv_checkout_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/checkout_date"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_checkout_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_checkout_01"
        android:layout_toRightOf="@+id/tv_checkout_01"
        android:text="8月12日"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_checkout_tableNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_checkout_01"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="101"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_checkout_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_checkout_01"
        android:layout_alignBottom="@+id/tv_checkout_tableNum"
        android:layout_toLeftOf="@+id/tv_checkout_tableNum"
        android:text="@string/table_num"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/checkout_linerlayout_01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_checkout_02"
        android:layout_margin="15dp"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:text="@string/serialNum"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:text="@string/selected"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkout_linerlayout_01"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:splitMotionEvents="true" >
    </ListView>

</RelativeLayout>